--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "antigen"]
 	path = antigen
 	url = git@github.com:zsh-users/antigen
+[submodule "doom-emacs"]
+	path = doom-emacs
+	url = git@github.com:hlissner/doom-emacs
