--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "doom-emacs"]
 	path = doom-emacs
 	url = git@github.com:hlissner/doom-emacs
+[submodule "asdf"]
+	path = asdf
+	url = git@github.com:asdf-vm/asdf
