--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # fonts
-font_family Hasklig
+font_family Hasklug Nerd Font
 font_size 14
 disble_ligatures false
 
@@ -73,7 +73,7 @@ clipboard_control write-clipboard write-primary
 # keyboard shorcuts
 clear_all_shortcuts yes
 
-kitty_mod ctrl
+kitty_mod ctrl+shift
 
 map kitty_mod+alt+r load_config_file
 
@@ -103,13 +103,13 @@ map kitty_mod+alt+k move_window up
 map kitty_mod+alt+j move_window down
 map kitty_mod+alt+h move_window left
 map kitty_mod+alt+l move_window right
-map kitty_mod+shift+k resize_window shorter 3
-map kitty_mod+shift+j resize_window taller 3
-map kitty_mod+shift+h resize_window narrower 3
-map kitty_mod+shift+l resize_window wider 3
+map kitty_mod+i resize_window shorter 3
+map kitty_mod+u resize_window taller 3
+map kitty_mod+y resize_window narrower 3
+map kitty_mod+o resize_window wider 3
 
 map kitty_mod+t         new_tab
-map kitty_mod+shift+t   set_tab_title
+map kitty_mod+r         set_tab_title
 map kitty_mod+q         close_tab
 map kitty_mod+right     next_tab
 map kitty_mod+left      previous_tab
