--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,11 +1,11 @@
+allow_remote_control true
+
 # fonts
 font_family Hasklug Nerd Font
 font_size 14
-disble_ligatures false
+disable_ligatures false
 
 # cursor
-cursor #b2b2b2
-cursor_text_color #dfdfdf
 cursor_shape beam
 cursor_beam_thickness 2
 cursor_blink_interval 1
@@ -29,43 +29,8 @@ tab_switch_strategy previous
 # layouts
 enabled_layouts splits:split_axis=horizontal
 
-# color scheme
-foreground #dfdfdf
-background #282c34
-
-selection_foreground #000000
-selection_background #dfdfdf
-
-color0 #000000
-color8 #4c4c4c
-
-color1 #eb6e67
-color9 #f19994
-
-color2  #95ee8f
-color10 #b4f3b0
-
-color3  #f8c456
-color11 #fad588
-
-color4  #6eaafb
-color12 #99c3fc
-
-color5  #d886f3
-color13 #e3aaf6
-
-color6  #6cdcf7
-color14 #98e6f9
-
-color7  #ffffff
-color15 #ffffff
-
-mark1_foreground black
-mark1_background #d2f4fc
-mark2_foreground black
-mark2_background #f3a8a3
-mark3_foreground black
-mark3_background #d886f3
+#colors
+include colors.conf
 
 # advanced
 clipboard_control write-clipboard write-primary
@@ -119,3 +84,4 @@ map kitty_mod+alt+left  move_tab_backward
 map kitty_mod+equal     change_font_size all +2.0
 map kitty_mod+minus     change_font_size all -2.0
 map kitty_mod+0         change_font_size all 0
+
