--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 fonts/.uuid
 nvim/plugin/
+
+templating/node_modules
+.delta
+dunst/dunstrc
+i3/theme.conf
+kitty/colors.conf
+nvim/lua/config/theme.lua
+polybar/colors.polybar
+rofi/theme.rasi
