--- a/i3/config
+++ b/i3/config
@@ -15,13 +15,14 @@ set $ws10 "10"
 include theme.conf
 
 # miscellaneous
-font pango:hasklig 12
+font pango:hasklig 14
 floating_modifier $mod
 
 # xdg autostart
 exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock-fancy --nofork
 exec --no-startup-id nm-applet
+exec --no-startup-id feh --bg-scale ~/dotfiles/dots/wallpaper.jpg
 
 # pulse audio
 set $refresh_i3status killall -SIGUSR1 i3status
