--- a/templating/package.json
+++ b/templating/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "nunjucks": "^3.2.4",
     "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
