--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,10 @@
+# vim:ft=conf
+
 allow_remote_control true
 
 # fonts
 font_family Hasklug Nerd Font
-font_size 12
+font_size 10
 disable_ligatures false
 
 # cursor
@@ -29,8 +31,46 @@ tab_switch_strategy previous
 # layouts
 enabled_layouts splits:split_axis=horizontal
 
-#colors
-include colors.conf
+#colors scheme
+cursor #6f737c
+cursor_text_color #d3d5db
+
+foreground #e9ebf0
+background #1f2430
+
+selection_foreground #191d27
+selection_background #d3d5db
+
+color0 #bfc1c8
+color8 #d3d5db
+
+color1 #f45c7f
+color9 #ff84a0
+
+color2  #addb67
+color10 #c5ef86
+
+color3  #ecc48d
+color11 #f9dcb3
+
+color4  #6cbeff
+color12 #9fd5ff
+
+color5  #c792ea
+color13 #deb7f8
+
+color6  #9fd4ff
+color14 #d2ebff
+
+color7  #e9ebf0
+color15 #e9ebf0
+
+mark1_foreground #191d27
+mark1_background #52b3ff
+mark2_foreground #191d27
+mark2_background #aaff29
+mark3_foreground #191d27
+mark3_background #ffbc60
 
 # advanced
 clipboard_control write-clipboard write-primary
@@ -84,4 +124,3 @@ map kitty_mod+alt+left  move_tab_backward
 map kitty_mod+equal     change_font_size all +2.0
 map kitty_mod+minus     change_font_size all -2.0
 map kitty_mod+0         change_font_size all 0
-
