--- a/polybar/config
+++ b/polybar/config
@@ -1,25 +1,25 @@
-include-file = ~/dotfiles/dots/polybar/colors.polybar
+# vim:ft=dosini
 
 [bar/top]
 monitor = ${env:MONITOR:}
-width = 100%:-16
-height = 36
+
 radius = 10
+
+width = 100%:-16
+height = 30
 fixed-center = true
 offset-y = 8
 offset-x = 8
 override-redirect = true
 wm-restack = i3
+border-size = 0
 
-tray-background = ${colors.black}
-background = ${colors.black}
-foreground = ${colors.grey9}
+tray-background = #1f2430
+background = #1f2430
+foreground = #d3d5db
 
 line-size = 3
 line-color = #f00
-
-border-size = 1
-border-color = ${colors.black}
 
 padding-left = 0
 padding-right = 2
@@ -27,7 +27,7 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = Hasklig:size=12
+font-0 = Hasklug Nerd Font:size=10
 font-1 = FontAwesome:style=Regular
 font-2 = Material Icons:style=Regular
 
@@ -40,6 +40,8 @@ tray-padding = 2
 cursor-click = pointer
 cursor-scroll = ns-resize
 
+enable-ipc = true
+
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
@@ -49,17 +51,17 @@ wrapping-scroll = false
 pin-workspaces = true
 
 label-mode-padding = 2
-label-mode-foreground = ${colors.white}
-label-mode-background = ${colors.blue}
+label-mode-foreground = #e9ebf0
+label-mode-background = #6cbeff
 
 label-focused = %index%
-label-focused-foreground = ${colors.dark_black}
-label-focused-background = ${colors.yellow}
+label-focused-foreground = #1f2430
+label-focused-background = #ecc48d
 label-focused-padding = 2
 
 label-unfocused = %index%
-label-unfocused-foreground = ${colors.grey9}
-label-unfocused-background = ${colors.black}
+label-unfocused-foreground = #d3d5db
+label-unfocused-background = #1f2430
 label-unfocused-padding = 2
 
 label-visible = %index%
@@ -68,24 +70,24 @@ label-visible-background = ${self.label-focused-background}
 label-visible-padding = ${self.label-focused-padding}
 
 label-urgent = %index%
-label-urgent-foreground = ${colors.dark_black}
-label-urgent-background = ${colors.red}
+label-urgent-foreground = #1f2430
+label-urgent-background = #f45c7f
 label-urgent-padding = 2
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = "CPU "
-format-prefix-foreground = ${colors.grey9}
-format-underline = ${colors.cyan}
+format-prefix-foreground = #d3d5db
+format-underline = #9fd4ff
 label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
 interval = 2
 format-prefix = "MEM "
-format-prefix-foreground = ${colors.grey9}
-format-underline = ${colors.yellow}
+format-prefix-foreground = #d3d5db
+format-underline = #ecc48d
 label = %percentage_used%%
 
 [module/wlan]
@@ -94,18 +96,18 @@ interface = ${env:WLAN:}
 interval = 3.0
 
 format-connected = WLAN <label-connected>
-format-connected-underline = ${colors.magenta}
+format-connected-underline = #c792ea
 label-connected = %essid%
 
-format-disconnected =
+format-disconnected = ""
 
 [module/eth]
 type = internal/network
 interface = enp0s31f6
 interval = 3.0
 
-format-connected-underline = ${colors.magenta}
-format-connected-prefix-foreground = ${colors.foreground-alt}
+format-connected-underline = #c792ea
+format-connected-prefix-foreground = NaN
 label-connected = ETH %local_ip%
 
 format-disconnected =
@@ -117,8 +119,8 @@ interval = 1
 date = "%Y-%m-%d"
 time = %H:%M:%S
 
-format-prefix-foreground = ${colors.grey9}
-format-underline = ${colors.red}
+format-prefix-foreground = #d3d5db
+format-underline = #f45c7f
 
 label = %date% %time%
 
@@ -129,13 +131,13 @@ adapter = AC
 full-at = 98
 
 format-charging = <label-charging>
-format-charging-underline = ${colors.green}
+format-charging-underline = #addb67
 
 format-discharging = <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
 format-full-prefix = "BAT "
-format-full-prefix-foreground = ${colors.foreground-alt}
+format-full-prefix-foreground = NaN
 format-full-underline = ${self.format-charging-underline}
 
 [module/temperature]
@@ -145,13 +147,13 @@ warn-temperature = 60
 
 format = <label>
 format-prefix = "TEMP "
-format-underline = ${colors.red}
+format-underline = #f45c7f
 format-warn = <ramp> <label-warn>
 format-warn-underline = ${self.format-underline}
 
 label = %temperature-c%
 label-warn = %temperature-c%
-label-warn-foreground = ${colors.grey9}
+label-warn-foreground = #d3d5db
 
 [settings]
 screenchange-reload = true
