--- a/i3/config
+++ b/i3/config
@@ -3,6 +3,8 @@
 # vars
 set $mod Mod4
 set $alt Mod1
+set $ctrl Control
+set $shift Shift
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -49,12 +51,12 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym $mod+d exec rofi -show combi
 
 # terminal
-bindsym $mod+Return exec kitty
-bindsym $mod+Shift+Return exec i3-input -F 'exec kitty --title "%s"' -P 'Terminal name: '
+bindsym $mod+Return exec alacritty msg create-window --command="zsh"
+bindsym $mod+$shift+Return exec alacritty
 
 # kill window
 bindsym $mod+q kill
-bindsym $mod+Shift+q focus parent,kill
+bindsym $mod+$shift+q focus parent,kill
 
 # focus window
 bindsym $mod+h focus left
@@ -64,19 +66,19 @@ bindsym $mod+l focus right
 bindsym $mod+a focus parent
 
 # move window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $mod+$shift+h move left
+bindsym $mod+$shift+j move down
+bindsym $mod+$shift+k move up
+bindsym $mod+$shift+l move right
 
 # resize
-bindsym $mod+$alt+h exec --no-startup-id ~/dotfiles/dots/scripts/i3resize left
-bindsym $mod+$alt+j exec --no-startup-id ~/dotfiles/dots/scripts/i3resize down
-bindsym $mod+$alt+k exec --no-startup-id ~/dotfiles/dots/scripts/i3resize up
-bindsym $mod+$alt+l exec --no-startup-id ~/dotfiles/dots/scripts/i3resize right
+bindsym $mod+$ctrl+h exec --no-startup-id ~/dotfiles/dots/scripts/i3resize left
+bindsym $mod+$ctrl+j exec --no-startup-id ~/dotfiles/dots/scripts/i3resize down
+bindsym $mod+$ctrl+k exec --no-startup-id ~/dotfiles/dots/scripts/i3resize up
+bindsym $mod+$ctrl+l exec --no-startup-id ~/dotfiles/dots/scripts/i3resize right
 
 # split
-bindsym $mod+Shift+v split h
+bindsym $mod+$shift+v split h
 bindsym $mod+v split v
 
 # fullscreen
@@ -88,7 +90,7 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+$shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus workspace
@@ -104,16 +106,16 @@ bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
 # move container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+$shift+1 move container to workspace number $ws1
+bindsym $mod+$shift+2 move container to workspace number $ws2
+bindsym $mod+$shift+3 move container to workspace number $ws3
+bindsym $mod+$shift+4 move container to workspace number $ws4
+bindsym $mod+$shift+5 move container to workspace number $ws5
+bindsym $mod+$shift+6 move container to workspace number $ws6
+bindsym $mod+$shift+7 move container to workspace number $ws7
+bindsym $mod+$shift+8 move container to workspace number $ws8
+bindsym $mod+$shift+9 move container to workspace number $ws9
+bindsym $mod+$shift+0 move container to workspace number $ws10
 
 # rename workspace
 bindsym $mod+Ctrl+r exec i3-input -F 'rename workspace to "%s"' -P 'Destination: '
@@ -123,14 +125,14 @@ bindsym $mod+Left move workspace to output left
 bindsym $mod+Right move workspace to output right
 
 # i3
-set $mode_system System (l) lock, (e) logout, (r) reload, (k) restart i3, (Shift+r) reboot, (Shift+s) shutdown
+set $mode_system System (l) lock, (e) logout, (r) reload, (k) restart i3, ($shift+r) reboot, ($shift+s) shutdown
 mode "$mode_system" {
   bindsym l exec --no-startup-id i3lock-fancy, mode "default"
   bindsym e exec --no-startup-id i3-msg exit, mode "default"
   bindsym r reload, mode "default"
   bindsym k exec polybar-msg cmd restart, restart, mode "default"
-  bindsym Shift+r exec --no-startup-id shutdown now -r, mode "default"
-  bindsym Shift+s exec --no-startup-id shutdown now, mode "default"
+  bindsym $shift+r exec --no-startup-id shutdown now -r, mode "default"
+  bindsym $shift+s exec --no-startup-id shutdown now, mode "default"
   bindsym Escape mode "default"
 }
 bindsym $mod+i mode "$mode_system"
@@ -155,15 +157,15 @@ exec --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id picom --experimental-backends
 
 # window tags
-bindsym $mod+Shift+z exec i3-input -F 'mark %s' -l 1 -P 'Mark: '
-bindsym $mod+Ctrl+Shift+z; unmark
+bindsym $mod+$shift+z exec i3-input -F 'mark %s' -l 1 -P 'Mark: '
+bindsym $mod+Ctrl+$shift+z; unmark
 bindsym $mod+z; exec i3-input -F '[con_mark="%s"] focus' -l 1 -P 'Goto: '
 
 # screenshots
 bindsym Print exec flameshot gui
 
 # notifications
-bindsym $mod+Shift+n exec ~/dotfiles/dots/dunst/pause.sh
+bindsym $mod+$shift+n exec ~/dotfiles/dots/dunst/pause.sh
 
 # theme
-bindsym $mod+Shift+t exec rofi -modi theme:~/dotfiles/dots/rofi/theme.py -show theme
+bindsym $mod+$shift+t exec rofi -modi theme:~/dotfiles/dots/rofi/theme.py -show theme
