chore(alacritty+tmux): use binary name for zsh instead of full path

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -84,7 +84,7 @@ set -g repeat-time 1000
 # Nvim
 set -g default-terminal "$TERM"
 set -ga terminal-overrides ",$TERM:RGB"
-set -g default-shell /usr/bin/zsh
+set -g default-shell zsh
 
 # Statusline
 set -g status on
