--- a/dunst/dunstrc.template
+++ b/dunst/dunstrc.template
@@ -13,7 +13,7 @@
     separator_color = frame
     sort = yes
     idle_threshold = 120
-    font = Hasklug Nerd Font {{ fontSize }}
+    font = {{ font }} {{ fontSize }}
     line_height = 0
     markup = full
     format = "<b>%a - %s</b>\n%b"
