--- a/polybar/config.template
+++ b/polybar/config.template
@@ -27,7 +27,7 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = Hasklug Nerd Font:size={{ fontSize }}
+font-0 = {{ font }}:size={{ fontSize }}
 font-1 = FontAwesome:style=Regular
 font-2 = Material Icons:style=Regular
 
