--- a/tmux/tmux.conf.template
+++ b/tmux/tmux.conf.template
@@ -21,7 +21,7 @@ run-shell '\
     && tmux unbind -a \; source-file $f'
 unbind -a
 
-bind -n 'M-r' source-file "$HOME/dotfiles/dots/tmux/tmux.conf" \; display "Configuration Reloaded!"
+bind -n 'M-r' source-file "$HOME/.tmux.conf" \; display "Configuration Reloaded!"
 bind -n 'M-c' send-keys C-l \; run-shell "sleep .3s" \; clear-history
 
 bind -n 'M-:' command-prompt
