feat(theme): use just one theme

--- a/nvim/lua/theme.lua.template
+++ b/nvim/lua/theme.lua.template
@@ -39,28 +39,29 @@ local colors = {
 }
 
 local syntax = {
-  statement = "{{ syntax.statement }}",
-  ["function"] = "{{ syntax.function }}",
-  variable = "{{ syntax.variable }}",
-  include = "{{ syntax.include }}",
-  keyword = "{{ syntax.keyword }}",
-  struct = "{{ syntax.struct }}",
-  string = "{{ syntax.string }}",
-  identifier = "{{ syntax.identifier }}",
-  field = "{{ syntax.field }}",
-  parameter = "{{ syntax.parameter }}",
-  property = "{{ syntax.property }}",
-  punctuation = "{{ syntax.punctuation }}",
-  constructor = "{{ syntax.constructor }}",
-  operator = "{{ syntax.operator }}",
-  preproc = "{{ syntax.preproc }}",
-  constant = "{{ syntax.constant }}",
-  tag = "{{ syntax.tag }}",
-  todo = { fg = "{{ syntax.todo_fg }}", bg = "{{ syntax.todo_bg }}" },
-  number = "{{ syntax.number }}",
-  comment = "{{ syntax.comment }}",
-  type = "{{ syntax.type }}",
-  conditional = "{{ syntax.conditional }}",
+  statement = "{{ colors.orange }}",
+  ["function"] = "{{ colors.blue }}",
+  variable = "{{ colors.foreground }}",
+  include = "{{ colors.magenta }}",
+  keyword = "{{ colors.magenta }}",
+  struct = "{{ colors.red }}",
+  string = "{{ colors.green }}",
+  identifier = "{{ colors.cyan }}",
+  field = "{{ colors.cyan }}",
+  parameter = "{{ colors.red }}",
+  property = "{{ colors.orange }}",
+  punctuation = "{{ colors.foreground }}",
+  constructor = "{{ colors.cyan }}",
+  operator = "{{ colors.grey8 }}",
+  preproc = "{{ colors.cyan }}",
+  constant = "{{ colors.orange }}",
+  tag = "{{ colors.red }}",
+  todo_fg = "{{ colors.cyan }}",
+  todo_bg = "{{ colors.grey1 }}",
+  number = "{{ colors.orange }}",
+  comment = "{{ colors.grey4 }}",
+  type = "{{ colors.yellow }}",
+  conditional = "{{ colors.red }}",
 }
 
 local themer = {
