feat(neovim): improve theme

--- a/nvim/lua/theme.lua.template
+++ b/nvim/lua/theme.lua.template
@@ -42,18 +42,18 @@ local syntax = {
   statement = "{{ colors.orange }}",
   ["function"] = "{{ colors.blue }}",
   variable = "{{ colors.foreground }}",
-  include = "{{ colors.magenta }}",
-  keyword = "{{ colors.magenta }}",
+  include = "{{ colors.red }}",
+  keyword = "{{ colors.red }}",
   struct = "{{ colors.red }}",
   string = "{{ colors.green }}",
-  identifier = "{{ colors.cyan }}",
+  identifier = "{{ colors.blue }}",
   field = "{{ colors.cyan }}",
-  parameter = "{{ colors.red }}",
+  parameter = "{{ colors.magenta }}",
   property = "{{ colors.orange }}",
   punctuation = "{{ colors.foreground }}",
   constructor = "{{ colors.cyan }}",
   operator = "{{ colors.grey8 }}",
-  preproc = "{{ colors.cyan }}",
+  preproc = "{{ colors.blue }}",
   constant = "{{ colors.orange }}",
   tag = "{{ colors.red }}",
   todo_fg = "{{ colors.cyan }}",
@@ -118,6 +118,21 @@ local themer = {
       DiffAdd = { fg = colors.dark_green, bg = colors.background },
       DiffChange = { fg = colors.dark_yellow, bg = colors.background },
       DiffDelete = { fg = colors.dark_red, bg = colors.background },
+      ["@lsp.type.class"] = { fg = syntax.type },
+      ["@lsp.type.decorator"] = { fg = syntax["function"] },
+      ["@lsp.type.enum"] = { fg = syntax.type },
+      ["@lsp.type.enumMember"] = { fg = syntax.constant },
+      ["@lsp.type.function"] = { fg = syntax["function"] },
+      ["@lsp.type.interface"] = { fg = syntax.type },
+      ["@lsp.type.macro"] = { fg = syntax["function"] },
+      ["@lsp.type.method"] = { fg = syntax["function"] },
+      ["@lsp.type.namespace"] = { fg = syntax.identifier },
+      ["@lsp.type.parameter"] = { fg = syntax.parameter },
+      ["@lsp.type.property"] = { fg = syntax.property },
+      ["@lsp.type.struct"] = { fg = syntax.type },
+      ["@lsp.type.type"] = { fg = syntax.type },
+      ["@lsp.type.typeParamater"] = { fg = syntax.type },
+      ["@lsp.type.variable"] = { fg = syntax.variable },
     },
     plugins = {
       nvim_tree = {
