--- a/polybar/config
+++ b/polybar/config
@@ -27,9 +27,7 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = Hasklug Nerd Font:size=10
-font-1 = FontAwesome:style=Regular
-font-2 = Material Icons:style=Regular
+font-0 = Hasklug Nerd Font:size=10;2
 
 modules-left = i3
 modules-right = memory cpu battery temperature eth wlan date
@@ -48,19 +46,19 @@ wrapping-scroll = false
 
 pin-workspaces = true
 
-label-mode-padding = 2
+label-mode-padding = 1
 label-mode-foreground = #e9ebf0
 label-mode-background = #6cbeff
 
 label-focused = %index%
 label-focused-foreground = #1f2430
 label-focused-background = #ecc48d
-label-focused-padding = 2
+label-focused-padding = 1
 
 label-unfocused = %index%
 label-unfocused-foreground = #d3d5db
 label-unfocused-background = #1f2430
-label-unfocused-padding = 2
+label-unfocused-padding = 1
 
 label-visible = %index%
 label-visible-foreground = ${self.label-focused-foreground}
@@ -70,22 +68,20 @@ label-visible-padding = ${self.label-focused-padding}
 label-urgent = %index%
 label-urgent-foreground = #1f2430
 label-urgent-background = #f45c7f
-label-urgent-padding = 2
+label-urgent-padding = 1
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = #d3d5db
-format-underline = #9fd4ff
+format-prefix = "󰘚 "
+format-foreground = #9fd4ff
 label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "MEM "
-format-prefix-foreground = #d3d5db
-format-underline = #ecc48d
+format-prefix = " "
+format-foreground = #ecc48d
 label = %percentage_used%%
 
 [module/wlan]
@@ -93,8 +89,8 @@ type = internal/network
 interface = ${env:WLAN:}
 interval = 3.0
 
-format-connected = WLAN <label-connected>
-format-connected-underline = #c792ea
+format-connected = "󰖩 <label-connected>"
+format-connected-foreground = #c792ea
 label-connected = %essid%
 
 format-disconnected = ""
@@ -104,8 +100,7 @@ type = internal/network
 interface = enp0s31f6
 interval = 3.0
 
-format-connected-underline = #c792ea
-format-connected-prefix-foreground = NaN
+format-connected-foreground = #c792ea
 label-connected = ETH %local_ip%
 
 format-disconnected =
@@ -114,11 +109,10 @@ format-disconnected =
 type = internal/date
 interval = 1
 
-date = "%Y-%m-%d"
+date = "󰃭 %Y-%m-%d"
 time = %H:%M:%S
 
-format-prefix-foreground = #d3d5db
-format-underline = #f45c7f
+format-foreground = #d3d5db
 
 label = %date% %time%
 
@@ -128,30 +122,32 @@ battery = BAT0
 adapter = AC
 full-at = 98
 
+format-charging-prefix = "󰂄 "
 format-charging = <label-charging>
-format-charging-underline = #addb67
+format-charging-foreground = #addb67
 
+format-discharging-prefix = "󰂀 "
 format-discharging = <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
+format-discharging-foreground = #addb67
 
-format-full-prefix = "BAT "
-format-full-prefix-foreground = #e9ebf0
-format-full-underline = ${self.format-charging-underline}
+format-full-prefix = "󰁹 "
+format-full-foreground = #addb67
 
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
-warn-temperature = 60
+warn-temperature = 70
 
 format = <label>
-format-prefix = "TEMP "
-format-underline = #f45c7f
-format-warn = "TEMP <label-warn>"
-format-warn-underline = ${self.format-underline}
+format-prefix = " "
+format-foreground = #f45c7f
+format-warn-prefix = " "
+format-warn-prefix-foreground = #ff3765
+format-warn = "<label-warn>"
 
 label = %temperature-c%
 label-warn = %temperature-c%
-label-warn-foreground = #d3d5db
+label-warn-foreground = #ff3765
 
 [settings]
 screenchange-reload = true
