--- a/nvim/lua/theme.lua.template
+++ b/nvim/lua/theme.lua.template
@@ -49,7 +49,7 @@ local syntax = {
   identifier = "{{ colors.blue }}",
   field = "{{ colors.cyan }}",
   parameter = "{{ colors.magenta }}",
-  property = "{{ colors.orange }}",
+  property = "{{ colors.cyan }}",
   punctuation = "{{ colors.foreground }}",
   constructor = "{{ colors.cyan }}",
   operator = "{{ colors.grey8 }}",
